[package]
name = "kernelraspberrypi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description ="kernel development"
repository ="https://github.com/girishnarayan/kernelyocto.git"
homepage ="https://github.com/girishnarayan/kernelyocto.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
